--- a/.github/workflows/main_test-fast-api-shahid.yml
+++ b/.github/workflows/main_test-fast-api-shahid.yml
@@ -30,7 +30,7 @@ jobs:
           source venv/bin/activate
       
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip install -r app/requirements.txt
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
@@ -58,4 +58,5 @@ jobs:
         with:
           app-name: 'test-fast-api-shahid'
           slot-name: 'Production'
+
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_FC7018784B2F47DF97B49C7C90AF8C18 }}
